operations/cf-infrastructure.yaml
AWSTemplateFormatVersion: '2010-09-09'

Resources:

  VPCA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      Tags:
        - Key: name
          Value: "VPC-A"


  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.0.0/24
      VpcId:
        Ref: VPCA
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: name
          Value: "private-subnet-A"

  EIPA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGatewayA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIPA
        - AllocationId
      SubnetId:
        Ref: PrivateSubnetA
      Tags:
      - Key: name
        Value: "nat-gateway-A"

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnetA
      RouteTableId:
        Ref: PrivateRouteTableA

  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCA
      Tags:
        - Key: name
          Value: "private-route-table-A"

  PrivateRouteA:
    DependsOn: NatGatewayA
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGatewayA




  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.1.0/24
      VpcId:
        Ref: VPCA
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: name
          Value: "public-subnet-A"

  PublicInternetGatewayA:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: name
        Value: "internet-gateway-private-subnet-A"

  IGAttachmentA:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCA
      InternetGatewayId:
        Ref: PublicInternetGatewayA

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnetA
      RouteTableId:
        Ref: PublicRouteTableA

  PublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCA
      Tags:
      - Key: name
        Value: "public-route-table-A"

  PublicRouteA:
    DependsOn: IGAttachmentA
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: PublicInternetGatewayA
